menambahkan api hba1c

--- a/templates/layout/navbar.html
+++ b/templates/layout/navbar.html
@@ -1,9 +1,7 @@
-<nav class="bg-white shadow-lg rounded-xl p-3 flex items-center justify-between relative">
+<nav class="bg-white shadow-lg rounded-xl ps flex items-center justify-between relative">
   <div class="font-semibold text-black text-xl flex items-center space-x-2">
-
     <a href="{{ url_for('index') }}" class="no-underline flex items-center">
       <img src="{{ url_for('static', filename='/img/bg.png') }}" alt="Logo Divistant" style="width: 200px; height:auto;">
-
     </a>
   </div>
   
