editing sentimen & hospital

--- a/templates/article_section.html
+++ b/templates/article_section.html
@@ -41,6 +41,8 @@
         </a>
     </div>
 
+    {% include 'layout/sentimen.html' %}
+
     <!-- Footer -->
     <footer class="bg-blue-900 py-6 mt-12">
         <div class="max-w-md mx-auto text-center">
