--- a/templates/admin/app.html
+++ b/templates/admin/app.html
@@ -14,25 +14,37 @@
 	<link rel="shortcut icon" href="img/icons/icon-48x48.png" />
 
 	<link rel="canonical" href="https://demo-basic.adminkit.io/" />
+	<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 	<title>AdminKit Demo - Bootstrap 5 Admin Template</title>
 
 	<link href="{{ url_for('static', filename='adminkit/css/app.css') }}" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/dataTables.bootstrap5.min.css">
+	
 
     {% endblock %}
 </head>
 
 <body>
 	{% include 'layout/alert.html' %}
-    {% block content %}
 
-    {% endblock %}
+	<div class="wrapper">
+		{% include "admin/layout_admin/sidebar.html" %}
+		<div class="main">
+			{% include "admin/layout_admin/navbar.html" %}
+			<main class="content">
+				{% block main_content %}{% endblock %}
+			</main>
+	
+			{% include "admin/layout_admin/footer.html" %}
+		</div>
+	</div>
 
 	<script src="{{ url_for('static', filename='adminkit/js/app.js') }}"></script>
 	 <!-- jQuery -->
 	 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	
 	 <!-- Bootstrap JS -->
 	 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 	 <!-- DataTables JS -->
