--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -1,15 +1,6 @@
 {% extends 'admin/app.html' %}
 
-{% block content %}
-<div class="wrapper">
-    {% include "admin/layout_admin/sidebar.html" %}
-    <div class="main">
-        {% include "admin/layout_admin/navbar.html" %}
-        <main class="content">
-            {% block main_content %}{% endblock %}
-        </main>
+{% block main_content %}
 
-        {% include "admin/layout_admin/footer.html" %}
-    </div>
-</div>
+<h1>Selamat Datang</h1>
 {% endblock %}
