--- a/templates/admin/edit_rumah_sakit.html
+++ b/templates/admin/edit_rumah_sakit.html
@@ -1,6 +1,6 @@
 {% extends 'admin/app.html' %}
 
-{% block content %}
+{% block main_content %}
 <div class="container mt-5">
     <h1 class="mb-4 text-center">Edit Rumah Sakit</h1>
 
