--- a/templates/admin/hasil_sentimen.html
+++ b/templates/admin/hasil_sentimen.html
@@ -1,6 +1,6 @@
-{% extends 'admin/dashboard.html' %}
+{% extends 'admin/app.html' %}
 {% block main_content %}
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
-<body>
+<body> -->
     <div class="container-fluid py-4">
         <div class="row">
             <div class="col-md-7">
@@ -90,6 +90,6 @@
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-</html>
+<!-- </body>
+</html> -->
 {% endblock %}
