--- a/templates/article_section.html
+++ b/templates/article_section.html
@@ -35,7 +35,7 @@
 
     <!-- Back Button -->
     <div class="max-w-4xl mx-auto p-4">
-        <a href="{{ url_for('artikel') }}" 
+        <a href="/artikel" 
            class="inline-flex items-center text-blue-900 hover:text-blue-700 transition-colors duration-300">
             ← Kembali ke Daftar Artikel
         </a>
