--- a/templates/Hospital.html
+++ b/templates/Hospital.html
@@ -19,7 +19,21 @@
         </div>
     <div class="container mx-auto p-4">
         <h1 class="text-center text-white font-semibold text-2xl mb-12">Rumah sakit terdekat dengan anda</h1>
-
+            <!-- Search Bar -->
+            <div class="mb-6 w-[80%] flex mx-auto">
+                <form action="{{ url_for('cek_rs') }}" method="GET">
+                    <div class="flex items-stretch">
+                        <input type="text" name="search" placeholder="Cari nama rumah sakit..."
+                            value="{{ request.args.get('search', '') }}"
+                            class="px-4 py-2 rounded-l-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500 flex-grow">
+                        <button type="submit"
+                            class="bg-blue-600 text-white px-4 py-2 rounded-r-lg hover:bg-blue-500 transition duration-200">
+                            Cari
+                        </button>
+                    </div>
+                </form>
+            </div>
+            
         <!-- Grid Rumah Sakit -->
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-4">
             {% for rs in rs_list %}
