menambah fitur dashboard

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,9 +28,9 @@
                 <p class="mt-4 mx-auto max-w-2xl text-lg sm:text-base font-sans text-white m-10">
                     Selamat datang di Divistant! Kami adalah asisten virtual yang siap membantu Anda dalam menjaga kesehatan diabetes. Dengan berbagai informasi terpercaya dan fitur interaktif, Divistant hadir untuk mendukung perjalanan Anda menuju hidup yang lebih sehat dan terkontrol.
                 </p>
-                <button class="bg-white text-blue-800 px-4 sm:px-6 md:px-8 py-2 sm:py-3 rounded-full hover:bg-blue-800 hover:text-white transition-colors duration-500 inline-flex items-center">
+                <!-- <button class="bg-white text-blue-800 px-4 sm:px-6 md:px-8 py-2 sm:py-3 rounded-full hover:bg-blue-800 hover:text-white transition-colors duration-500 inline-flex items-center">
                     download aplikasi 
-                </button>
+                </button> -->
             </header>
         </div>
 
