--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -1,6 +1,22 @@
 {% extends 'admin/app.html' %}
 
 {% block main_content %}
-
-<h1>Selamat Datang</h1>
+<div class="row">
+    <div class="col-md-6">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Total Artikel</h5>
+                <p class="card-text">{{ total_articles }}</p>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-6">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Total Rumah Sakit</h5>
+                <p class="card-text">{{ total_hospitals }}</p>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
