--- a/templates/Hospital.html
+++ b/templates/Hospital.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RRS-Rekomendasi Rumah Sakit</title>
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='/img/logo.png') }}">
+    <title>Divistant - Sahabat Virtual untuk Hidup Lebih Sehat</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='dist/css/output.css') }}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,86 +13,85 @@
         href="https://fonts.googleapis.com/css2?family=Martian+Mono:wght@300;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&family=Quicksand:wght@300..700&family=Roboto:ital,wght@0,300;1,500&display=swap"
         rel="stylesheet">
 </head>
-<body >
+<body>
     <div class="bg-blue-800 p-4 md:p-10 font-sans">
         <div class="mb-10">
             {% include 'layout/navbar.html' %}
         </div>
-    <div class="container mx-auto p-4">
-        <h1 class="text-center text-white font-semibold text-2xl mb-12">Rumah sakit terdekat dengan anda</h1>
+        <div class="container mx-auto p-4">
+            <h1 class="text-center text-white font-semibold text-2xl sm:text-3xl md:text-4xl mb-12">Rumah Sakit Terdekat dengan Anda</h1>
             <!-- Search Bar -->
-            <div class="mb-6 w-[80%] flex mx-auto">
-                <form action="{{ url_for('cek_rs') }}" method="GET">
+            <div class="mb-6 w-full sm:w-[80%] flex mx-auto">
+                <form action="{{ url_for('cek_rs') }}" method="GET" class="w-full">
                     <div class="flex items-stretch">
                         <input type="text" name="search" placeholder="Cari nama rumah sakit..."
                             value="{{ request.args.get('search', '') }}"
-                            class="px-4 py-2 rounded-l-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500 flex-grow">
+                            class="px-4 py-2 rounded-l-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500 flex-grow text-sm sm:text-base">
                         <button type="submit"
-                            class="bg-blue-600 text-white px-4 py-2 rounded-r-lg hover:bg-blue-500 transition duration-200">
+                            class="bg-blue-600 text-white px-4 py-2 rounded-r-lg hover:bg-blue-500 transition duration-200 text-sm sm:text-base">
                             Cari
                         </button>
                     </div>
                 </form>
             </div>
-            
-        <!-- Grid Rumah Sakit -->
-        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-4">
-            {% for rs in rs_list %}
-            <div class="bg-white shadow-md rounded-lg overflow-hidden min-h-[350px] flex flex-col">
-                <img class="w-full h-48 object-cover object-center" src="{{ url_for('static', filename='uploads/' + rs.gambar) }}" alt="Image of {{ rs.rumah_sakit }}">
-                <div class="p-4 flex flex-col justify-between flex-grow">
-                    <h3 class="font-bold text-lg text-center mb-2">{{ rs.rumah_sakit }}</h3>
-                    <div class="flex items-center justify-between mt-2 mb-4">
-                        <span class="text-sm text-green-600 font-semibold">{{ rs.tipe }}</span>
-                        <span class="text-gray-600 text-sm">Rating: {{ rs.rating }} ⭐</span>
-                    </div>
-                    <a href="{{ rs.maps }}" class="block mt-auto">
-                        <div class="border bg-blue-700 p-2 rounded-lg text-center text-white hover:bg-blue-600 transition duration-200 w-full">
-                            Cek Rute
+
+            <!-- Grid Rumah Sakit -->
+            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
+                {% for rs in rs_list %}
+                <div class="bg-white shadow-md rounded-lg overflow-hidden flex flex-col transition-transform transform hover:scale-105">
+                    <img class="w-full h-48 object-cover object-center" src="{{ url_for('static', filename='uploads/' + rs.gambar) }}" alt="Image of {{ rs.rumah_sakit }}">
+                    <div class="p-4 flex flex-col justify-between flex-grow">
+                        <h3 class="font-bold text-lg text-center mb-2 truncate">{{ rs.rumah_sakit }}</h3>
+                        <div class="flex items-center justify-between mt-2 mb-4">
+                            <span class="text-sm text-green-600 font-semibold">{{ rs.tipe }}</span>
+                            <span class="text-gray-600 text-sm">Rating: {{ rs.rating }} ⭐</span>
                         </div>
-                    </a>
+                        <a href="{{ rs.maps }}" class="block mt-auto">
+                            <div class="border bg-blue-700 p-2 rounded-lg text-center text-white hover:bg-blue-600 transition duration-200 w-full">
+                                Cek Rute
+                            </div>
+                        </a>
+                    </div>
                 </div>
-            </div>
-            {% endfor %}
-        </div>
-        
-
-        <!-- Navigasi Pagination -->
-        <div class="flex justify-center mt-8">
-            <nav class="flex flex-wrap items-center space-x-2 sm:space-x-3 md:space-x-4">
-                {% if pagination.has_prev %}
-                <a href="{{ url_for('cek_rs', page=pagination.prev_num) }}" class="bg-blue-600 text-white px-3 py-1 sm:px-4 sm:py-2 rounded hover:bg-blue-500 text-xs sm:text-sm md:text-base w-auto">
-                    Previous
-                </a>
-                {% endif %}
-        
-                {% for page_num in range(1, pagination.pages + 1) %}
-                <a href="{{ url_for('cek_rs', page=page_num) }}" 
-                   class="px-3 py-1 sm:px-4 sm:py-2 rounded {{ 'bg-blue-600 text-white' if page_num == pagination.page else 'bg-gray-200 text-gray-800 hover:bg-gray-300' }} text-xs sm:text-sm md:text-base w-auto">
-                    {{ page_num }}
-                </a>
                 {% endfor %}
-        
-                {% if pagination.has_next %}
-                <a href="{{ url_for('cek_rs', page=pagination.next_num) }}" class="bg-blue-600 text-white px-3 py-1 sm:px-4 sm:py-2 rounded hover:bg-blue-500 text-xs sm:text-sm md:text-base w-auto">
-                    Next
-                </a>
-                {% endif %}
-            </nav>
-        </div>
-        
-    </div>
-    </div>
-</body>
-<script>
-    // Ambil tombol hamburger dan menu
-    const hamburgerBtn = document.getElementById('hamburger-btn');
-    const menu = document.getElementById('menu');
+            </div>
 
-    // Tambahkan event listener untuk toggle menu
-    hamburgerBtn.addEventListener('click', () => {
-        menu.classList.toggle('hidden');
-    });
-</script>
+            <!-- Navigasi Pagination -->
+            <div class="flex justify-center mt-8">
+                <nav class="flex flex-wrap items-center gap-2">
+                    {% if pagination.has_prev %}
+                    <a href="{{ url_for('cek_rs', page=pagination.prev_num) }}" class="flex items-center justify-center bg-blue-600 text-white px-3 py-2 rounded-full hover:bg-blue-500 text-sm sm:text-base transition duration-200">
+                        <span class="material-icons"><</span> Previous
+                    </a>
+                    {% endif %}
+
+                    {% for page_num in range(1, pagination.pages + 1) %}
+                    <a href="{{ url_for('cek_rs', page=page_num) }}" 
+                       class="flex items-center justify-center px-4 py-2 rounded-full {{ 'bg-blue-600 text-white' if page_num == pagination.page else 'bg-gray-200 text-gray-800 hover:bg-gray-300' }} text-sm sm:text-base transition duration-200">
+                        {{ page_num }}
+                    </a>
+                    {% endfor %}
+
+                    {% if pagination.has_next %}
+                    <a href="{{ url_for('cek_rs', page=pagination.next_num) }}" class="flex items-center justify-center bg-blue-600 text-white px-3 py-2 rounded-full hover:bg-blue-500 text-sm sm:text-base transition duration-200">
+                        Next <span class="material-icons">></span>
+                    </a>
+                    {% endif %}
+                </nav>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        // Ambil tombol hamburger dan menu
+        const hamburgerBtn = document.getElementById('hamburger-btn');
+        const menu = document.getElementById('menu');
+
+        // Tambahkan event listener untuk toggle menu
+        hamburgerBtn?.addEventListener('click', () => {
+            menu.classList.toggle('hidden');
+        });
+    </script>
+</body>
 
 </html>
