editing article section

--- a/templates/Hospital.html
+++ b/templates/Hospital.html
@@ -14,7 +14,7 @@
         rel="stylesheet">
 </head>
 <body>
-    <div class="bg-blue-800 p-4 md:p-10 font-sans">
+    <div class="bg-blue-900 p-4 md:p-10 font-sans">
         <div class="mb-10">
             {% include 'layout/navbar.html' %}
         </div>
@@ -81,7 +81,7 @@
             </div>
         </div>
     </div>
-
+    {% include 'layout/footer.html'%}
     <script>
         // Ambil tombol hamburger dan menu
         const hamburgerBtn = document.getElementById('hamburger-btn');
