--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
             <header class="text-center">
                 <h2 class="text-3xl sm:text-4xl md:text-5xl font-bold pb-10 sm:pb-16 md:pb-20 text-white">HALO DIVIS<span class="text-[#232947] rounded-full p-2 bg-white hover:bg-blue-900 hover:text-white">TER!</span></h2>
                 <p class="mt-4 mx-auto max-w-2xl text-lg sm:text-base font-sans text-white m-10">
-                    Selamat datang di Divistant! Kami adalah asisten virtual yang siap membantu Anda dalam menjaga kesehatan diabetes. Dengan berbagai informasi terpercaya dan fitur interaktif, Divistant hadir untuk mendukung perjalanan Anda menuju hidup yang lebih sehat dan terkontrol.
+                    Selamat datang di Divistant! Kami adalah asisten virtual yang siap membantu Anda dalam menjaga kesehatan untuk para pengidap diabetes. Dengan berbagai informasi terpercaya dan fitur interaktif, Divistant hadir untuk mendukung perjalanan Anda menuju hidup yang lebih terkontrol.
                 </p>
                 <!-- <button class="bg-white text-blue-800 px-4 sm:px-6 md:px-8 py-2 sm:py-3 rounded-full hover:bg-blue-800 hover:text-white transition-colors duration-500 inline-flex items-center">
                     download aplikasi 
@@ -82,7 +82,7 @@
 
     
     <!-- Rekomendasi rumah sakit -->
-    <h2 class=" text-center font-sans text-xl sm:text-xs font-semibold">Devister takut untuk berpergian karna gejala yang di alami sering kambuh? </h2>
+    <h2 class=" text-center font-sans text-6xl sm:text-xl font-semibold">Devister takut untuk berpergian karna gejala yang di alami sering kambuh? </h2>
     <h2 class="text-3xl sm:text-4xl md:text-5xl font-bold pb-10 sm:pb-16 md:pb-20 text-center ">JANGAN TAKUT LAGI!!</h2>
     <section class="bg-blue-900 ">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -93,9 +93,9 @@
             <header class="text-center">
 
                 <div class="max-w-6xl mx-auto py-16 px-4 sm:px-6 lg:px-8">
-                    <h1 class="text-2xl sm:text-3xl lg:text-4xl font-bold mb-4 text-white text-center">MEREKOMENDASIKAN RUMAH SAKIT TERDEKAT DENGAN ANDA!</h1>
+                    <h1 class="text-2xl sm:text-3xl lg:text-4xl font-bold mb-4 text-white text-center">MEREKOMENDASIKAN RUMAH SAKIT UNTUK ANDA!</h1>
                     <p class="text-white mb-8 text-sm sm:text-base lg:text-lg text-center">
-                        Dapatkan rekomendasi rumah sakit terdekat untuk layanan kesehatan diabetes Anda. Kami bekerja sama dengan fasilitas kesehatan di sekitar Anda untuk membantu Anda menemukan layanan perawatan yang mudah diakses dan sesuai kebutuhan. Hanya dengan satu klik, temukan opsi perawatan yang dekat dan terpercaya untuk mendukung kesehatan Anda.
+                        Dapatkan rekomendasi rumah sakit untuk layanan kesehatan diabetes Anda. Kami bekerja sama dengan fasilitas kesehatan, untuk membantu Anda menemukan layanan perawatan yang mudah diakses dan sesuai kebutuhan. Hanya dengan satu klik, temukan opsi perawatan yang dekat dan terpercaya untuk mendukung kesehatan Anda.
                     </p>
                     
                     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-6">
@@ -153,31 +153,18 @@
 
            <div class="bg-white text-center">
                 <p class="mx-auto max-w-2xl text-lg sm:text-base font-sans mb-20 bg-white pt-32 ">
-                    Butuh jawaban cepat atau dukungan langsung? Gunakan fitur chatbot kami, Divister! Chatbot ini siap menjawab pertanyaan seputar diabetes, memberikan tips kesehatan, dan membantu Anda mencari informasi yang Anda butuhkan, kapan pun dan di mana pun. Divister ada untuk mendampingi Anda dengan informasi yang tepat dan dukungan yang responsif.
+                    Butuh jawaban cepat atau dukungan langsung? Gunakan fitur chatbot kami, Divister! Chatbot ini siap menjawab pertanyaan seputar diabetes, memberikan tips kesehatan, dan membantu Anda mencari informasi yang Anda butuhkan, kapan pun dan di mana pun. Divister ada untuk mendampingi Anda dengan informasi yang tepat.
                 </p>
 
                 <button class="bg-blue-900 text-white px-4 sm:px-6 md:px-8 py-2 sm:py-3 rounded-full hover:bg-blue-700 hover:text-white transition-colors duration-500 inline-flex items-center">
-                    Coba Chatbot
+                    Coba Chatbot kami
                 </button>
             </div>
         </div>
 
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
             <path fill="#ffffff" fill-opacity="1" d="M0,224L40,240C80,256,160,288,240,288C320,288,400,256,480,240C560,224,640,224,720,229.3C800,235,880,245,960,256C1040,267,1120,277,1200,256C1280,235,1360,181,1400,154.7L1440,128L1440,0L1400,0C1360,0,1280,0,1200,0C1120,0,1040,0,960,0C880,0,800,0,720,0C640,0,560,0,480,0C400,0,320,0,240,0C160,0,80,0,40,0L0,0Z"></path>
-          </svg>
-
-        <footer class="bg-blue-900 py-8">
-            <div class="max-w-md mx-auto text-center">
-                <!-- Logo atau ikon -->
-                <div class="flex justify-center mb-2">
-                    <img src="{{url_for('static', filename='/img/Footer_Logo.png')}}" class="w-20 h-20"">
-                </div>
-                
-                <!-- Teks copyright -->
-                <p class="text-gray-400 text-sm mt-1">&copy; Made with 🍜&🍵</p>
-            </div>
-        </footer>
-        
+          </svg> 
         
     </section>
     <style>
