--- a/templates/layout/footer.html
+++ b/templates/layout/footer.html
@@ -1,1 +1,11 @@
-&copy; Copyright 2010 by <a href="http://domain.invalid/">you</a>.
+<footer class="bg-blue-900 py-8">
+    <div class="max-w-md mx-auto text-center">
+        <!-- Logo atau ikon -->
+        <div class="flex justify-center mb-2">
+            <img src="{{url_for('static', filename='/img/Footer_Logo.png')}}" class="w-20 h-20"">
+        </div>
+        
+        <!-- Teks copyright -->
+        <p class="text-gray-400 text-sm mt-1">&copy; Made with 🍜&🍵</p>
+    </div>
+</footer>
