--- a/templates/article_section.html
+++ b/templates/article_section.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='dist/css/output.css') }}">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
-<body class="bg-gray-100 font-sans leading-relaxed tracking-wide">
+<body class="bg-blue-900 font-sans leading-relaxed tracking-wide">
 
     <!-- Article Detail Section -->
     <section class="max-w-4xl mx-auto p-8 bg-white shadow-lg rounded-lg my-10">
@@ -36,19 +36,14 @@
     <!-- Back Button -->
     <div class="max-w-4xl mx-auto p-4">
         <a href="/artikel" 
-           class="inline-flex items-center text-blue-900 hover:text-blue-700 transition-colors duration-300">
+           class="inline-flex items-center text-white hover:text-black transition-colors duration-300">
             ← Kembali ke Daftar Artikel
         </a>
     </div>
 
     {% include 'layout/sentimen.html' %}
-
-    <!-- Footer -->
-    <footer class="bg-blue-900 py-6 mt-12">
-        <div class="max-w-md mx-auto text-center">
-            <p class="text-gray-400 text-sm">&copy; 2024 Divistant</p>
-        </div>
-    </footer>
+    {% include 'layout/footer.html'%}
+    
 
 </body>
 </html>
